@@ -4,4 +4,4 @@ AM_LDFLAGS =
 
 noinst_LIBRARIES = libutil.a
 libutil_a_SOURCES = getopt.c getopt.h getopt1.c ssl_writev.c generic_types.h \
-					queue.c queue.h
+					queue.c queue.h heap.c heap.h
